add semantic elements

--- a/styles/video.css
+++ b/styles/video.css
@@ -23,6 +23,18 @@ input:focus {
     }
 }
 
+@media (min-width: 751px) and (max-width:999px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1000px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
 .video-preview {
     /* we have to set these additional properties with display:inline-block */
     /* display: inline-block; */
@@ -60,7 +72,7 @@ input:focus {
 }
 
 .video-time{
-    font-family: Roboto,Arial;
+    /* font-family: Roboto,Arial; */
     font-size: 12px;
     font-weight: 500;
     padding: 4px;
